# star-actually

./: .gitignore  .keisaku.json  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.claude/skills/peko/: SKILL.md
.claude/skills/peko/references/: record-formats.md  star-actually-ethos.md
assets/: style.css
ho-process/: ho-00-orientation.md  ho-01-receptionist-config.md  ho-02-ordered-chains.md  kamae-1-peko-seed.md  kamae-2-peko-system-design.md
ho-process/agent-tasks/: Ho-02-AT-01.md  Ho-02-AT-02.md  agent-task-2026-07-15-build-peko-skill.md
metadata/: description.md  ethos.md
portal/: __init__.py  app.py
src/star_actually/: __init__.py  chains.py  cli.py  config.py  graph.py  nodes.py  render.py
src/star_actually/assets/: app.js  style.css
src/star_actually/templates/: base.html.j2  fragment.html.j2  help.html.j2  index.html.j2
templates/: fragment.html.j2  index.html.j2
tests/: test_chains.py  test_config.py  test_graph.py  test_nodes.py  test_package.py  test_portal.py  test_render.py
